Spacing resolved

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -37,6 +37,7 @@ body {
 .gameOn {
   position: relative;
   width: 100%;
+  height: 750px;
   background: url(http://www.tatouagedesigns.com/photos/22164P-2T.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -48,7 +49,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 1100px;
-  overflow: hidden;
   font-size: 25px;
   text-align: center;
   line-height: 30px;
@@ -112,6 +112,7 @@ body {
   width: 20%;
   border-radius: 30px;
   margin-top: 55px;
+  margin-right: 1.5%;
   font-family: $sancreek;
   color: red;
   background-color: yellow;
@@ -120,7 +121,7 @@ body {
 .right {
   float: right;
   width: 350px;
-  margin-left: 1%;
+  margin-right: 1%;
 
 //large cat image
   .cat {
